test/interaction/Issue289r.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Set " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Issue289r.agda:6.13-17: error: [Interaction.CaseSplitError] Cannot split here, as we are not in a function definition when checking that the expression ? has type Set" nil)
((last . 3) . (agda2-maybe-goto '("Issue289r.agda" . 160)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
